--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,19 @@
 server {
+    server_name fixplus.org;
+
+    listen 80;
+
+    client_max_body_size 200M;
+
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
+}
+
+
+
+server {
     server_name api.fixplus.org;
 
     listen 80;
