--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,7 @@ server {
     client_max_body_size 200M;
 
     location / {
-        root /usr/share/nginx/html;
+        alias /app/frontend/build;
         try_files $uri $uri/ /index.html;
     }
 }
