--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,13 @@
 server {
-    server_name fixplus.org;
-
     listen 80;
 
-    client_max_body_size 200M;
+    server_name fixplus.org;
 
+    root /app/frontend/build;
+
+    index index.html;
     location / {
-        alias /app/frontend/build;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ =404;
     }
 }
 
