add front webapp nginx 5

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,11 @@
 server {
-    listen 80;
-
-    server_name fixplus.org;
-
-    root /app/frontend/build;
-
-    index index.html;
-    location / {
-        try_files $uri $uri/ =404;
-    }
+  server_name fixplus.org;
+  listen 80;
+  listen [::]:80;
+  root /app/frontend/build;
+  location / {
+    try_files $uri /index.html;
+  }
 }
 
 
