add front webapp nginx 8

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,11 +4,8 @@ ADD default.conf /etc/nginx/conf.d/default.conf
 
 RUN mkdir -p /app/backend/staticfiles && \
     mkdir -p /app/backend/mediafiles && \
-    mkdir -p /app/frontend/build && \
     chmod 755 /app/backend/staticfiles && \
-    chmod 755 /app/backend/mediafiles  && \
-    chmod 755 /app/frontend/build
+    chmod 755 /app/backend/mediafiles
 
 VOLUME /app/backend/staticfiles
 VOLUME /app/backend/mediafiles
-VOLUME /app/frontend/build
