--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,11 +5,30 @@ server {
 
     client_max_body_size 200M;
 
+    # Serve static files with CORS headers
     location /static {
         alias /app/backend/staticfiles;
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "GET";
+        add_header Access-Control-Allow-Headers "*";
+        add_header Access-Control-Max-Age 3600;
     }
 
+    # Serve media files with CORS headers
     location /media {
         alias /app/backend/mediafiles;
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "GET";
+        add_header Access-Control-Allow-Headers "*";
+        add_header Access-Control-Max-Age 3600;
+    }
+
+    # Handle preflight requests (OPTIONS) globally
+    if ($request_method = 'OPTIONS') {
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "GET, OPTIONS";
+        add_header Access-Control-Allow-Headers "*";
+        add_header Access-Control-Max-Age 3600;
+        return 204;
     }
 }
