Update nginx default.conf 3

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,19 +5,27 @@ server {
 
     client_max_body_size 200M;
 
+    # Add CORS headers for all responses
+    add_header Access-Control-Allow-Origin "*" always;
+    add_header Access-Control-Allow-Methods "GET, HEAD, OPTIONS" always;
+    add_header Access-Control-Allow-Headers "*" always;
+    add_header Access-Control-Max-Age 3600 always;
+
     location /static {
         alias /app/backend/staticfiles;
-        add_header Access-Control-Allow-Origin "*";
-        add_header Access-Control-Allow-Methods "GET, HEAD";
-        add_header Access-Control-Allow-Headers "*";
-        add_header Access-Control-Max-Age 3600;
     }
 
     location /media {
         alias /app/backend/mediafiles;
-        add_header Access-Control-Allow-Origin "*";
-        add_header Access-Control-Allow-Methods "GET, HEAD";
-        add_header Access-Control-Allow-Headers "*";
-        add_header Access-Control-Max-Age 3600;
+
+        # Handle preflight requests
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, HEAD, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "*" always;
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
     }
 }
