--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -93,6 +93,7 @@ jobs:
           EMAIL_HOST_USER="${{ secrets.EMAIL_HOST_USER }}" \
           EMAIL_HOST_PASSWORD="${{ secrets.EMAIL_HOST_PASSWORD }}" \
           SMS_API_KEY="${{ secrets.SMS_API_KEY }}" \
+          NESHAN_SERVICE_API_KEY="${{ secrets.NESHAN_SERVICE_API_KEY }}" \
           docker compose up -d --force-recreate --no-build
     
           echo "------------- docker prune old image -------------"
