--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,19 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data/
 
+  mongo:
+    image: mongo:8.0.9
+    container_name: fixplus-mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: fixplus
+      MONGO_INITDB_ROOT_PASSWORD: 1234@1234
+      MONGO_INITDB_DATABASE: fixplus
+    volumes:
+      - mongo-data:/var/lib/mongo/data/
+
   rabbitmq:
     image: "rabbitmq:3.9-management"
     ports:
@@ -38,4 +51,5 @@ services:
 volumes:
     postgres-data:
     redis-data:
+    mongo-data:
 
