--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
       - SMS_API_KEY=${SMS_API_KEY}
       - NESHAN_SERVICE_API_KEY=${NESHAN_SERVICE_API_KEY}
+      - ZARINPAL_MERCHANT_CODE=${ZARINPAL_MERCHANT_CODE}
     volumes:
       - static_volume:/app/backend/staticfiles
       - media_volume:/app/backend/mediafiles
@@ -132,6 +133,7 @@ services:
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
       - SMS_API_KEY=${SMS_API_KEY}
       - NESHAN_SERVICE_API_KEY=${NESHAN_SERVICE_API_KEY}
+      - ZARINPAL_MERCHANT_CODE=${ZARINPAL_MERCHANT_CODE}
     volumes:
       - .:/app
     depends_on:
@@ -166,6 +168,7 @@ services:
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
       - SMS_API_KEY=${SMS_API_KEY}
       - NESHAN_SERVICE_API_KEY=${NESHAN_SERVICE_API_KEY}
+      - ZARINPAL_MERCHANT_CODE=${ZARINPAL_MERCHANT_CODE}
     volumes:
       - .:/app
     depends_on:
